# openpbso

./: .gitignore  .gitmodules  CMakeLists.txt  ModeData.h  README.md  io.cpp  modal_solver.h
tools/: real_time_modal_sound.cpp  seq_viewer.cpp
